# streamchat-engine

./: DEMO_SCRIPT.md  LICENSE  PORTFOLIO_CONTENT.md  README.md
ai-python/: main.py  requirements.txt
analytics-rust/: Cargo.toml
analytics-rust/src/: main.rs
backend-go/: go.mod
backend-go/cmd/server/: main.go
backend-go/internal/db/: sqlite.go
backend-go/internal/websocket/: client.go  hub.go  models.go
client-android/app/src/main/java/com/clustertalk/: ChatViewModel.kt  WebSocketManager.kt
client-ios/ClusterTalk/Sources/Network/: WebSocketManager.swift
client-ios/ClusterTalk/Sources/Views/: ContentView.swift
client-web/: package-lock.json  package.json
client-web/src/: App.css  App.tsx  store.ts
infra/: docker-compose.yml
