[package]
name = "cluster-talk-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0" # Using Actix for HTTP ingestion since we fallback from Kafka
chrono = "0.4"
